WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182931
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::TimerBase::~TimerBase
https://bugs.webkit.org/show_bug.cgi?id=182931
Summary
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::TimerBase::~Tim...
Chris Dumez
Reported
2018-02-19 10:45:01 PST
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::TimerBase::~TimerBase: Thread 5 name: Dispatch queue: com.apple.avplayer.configuration Thread 5 Crashed: 0 WebCore 0x0000000189bab16c WebCore::TimerBase::~TimerBase() + 120 (Timer.cpp:194) 1 WebCore 0x0000000189bab11c WebCore::TimerBase::~TimerBase() + 40 (Timer.cpp:194) 2 WebCore 0x0000000189c5578c WebCore::CachedResource::~CachedResource() + 888 (Timer.h:148) 3 WebCore 0x0000000189cd78bc WebCore::CachedRawResource::~CachedRawResource() + 148 (CachedRawResource.h:34) 4 WebCore 0x0000000189bb3cec WebCore::CachedResource::unregisterHandle(WebCore::CachedResourceHandleBase*) + 184 (CachedResource.cpp:608) 5 WebCore 0x0000000189bb2924 WebCore::CachedResourceHandleBase::setResource(WebCore::CachedResource*) + 48 (CachedResourceHandle.cpp:63) 6 WebCore 0x000000018aae0ad0 WebCore::MediaResource::~MediaResource() + 76 (CachedResourceHandle.h:73) 7 WebCore 0x000000018aae0b74 WebCore::MediaResource::~MediaResource() + 12 (MediaResourceLoader.cpp:122) 8 libobjc.A.dylib 0x00000001803beef4 object_cxxDestructFromClass(objc_object*, objc_class*) + 148 (objc-class.mm:462) 9 libobjc.A.dylib 0x00000001803cc990 objc_destructInstance + 68 (objc-runtime-new.mm:6532) 10 libobjc.A.dylib 0x00000001803cc9f8 object_dispose + 16 (objc-runtime-new.mm:6551) 11 WebCore 0x000000018b05dd5c -[WebCoreNSURLSessionDataTask dealloc] + 136 (WebCoreNSURLSession.mm:542) 12 CoreFoundation 0x00000001810c87f0 -[__NSDictionaryM dealloc] + 164 (NSCollectionAux.h:49) 13 AVFoundation 0x0000000187541cf0 -[AVAssetCustomURLBridgeForNSURLSession dealloc] + 68 (AVAssetCustomURL.m:571) 14 AVFoundation 0x000000018759b530 -[AVAssetResourceLoader dealloc] + 356 (AVAssetResourceLoader.m:670) 15 AVFoundation 0x000000018744728c -[AVURLAsset dealloc] + 248 (AVAsset.m:3603) 16 AVFoundation 0x000000018748748c -[AVPlayerItemTrack dealloc] + 192 (AVPlayerItemTrack.m:229) 17 CoreFoundation 0x00000001810c3458 -[__NSArrayI dealloc] + 64 (NSCollectionAux.h:71) 18 AVFoundation 0x000000018746a7b4 -[AVPlayerItem dealloc] + 860 (AVPlayerItem.m:2490) 19 AVFoundation 0x0000000187452b6c __destroy_helper_block_.381 + 28 (AVPlayer.m:2630) 20 libsystem_blocks.dylib 0x0000000180b98a5c _Block_release + 152 (runtime.c:175) 21 libdispatch.dylib 0x0000000180af8ae4 _dispatch_client_callout + 16 (object.m:507) 22 libdispatch.dylib 0x0000000180b02a38 _dispatch_queue_serial_drain$VARIANT$mp + 608 (inline_internal.h:2500) 23 libdispatch.dylib 0x0000000180b03380 _dispatch_queue_invoke$VARIANT$mp + 336 (queue.c:5295) 24 libdispatch.dylib 0x0000000180b03d4c _dispatch_root_queue_drain_deferred_wlh$VARIANT$mp + 340 (queue.c:5913) 25 libdispatch.dylib 0x0000000180b0c11c _dispatch_workloop_worker_thread$VARIANT$mp + 668 (source.c:2529) 26 libsystem_pthread.dylib 0x0000000180e21e70 _pthread_wqthread + 860 (pthread.c:2218) 27 libsystem_pthread.dylib 0x0000000180e21b08 start_wqthread + 4
Attachments
Patch
(2.42 KB, patch)
2018-02-19 10:53 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2018-02-19 12:39 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-02-19 10:45:42 PST
<
rdar://problem/37602962
>
Chris Dumez
Comment 2
2018-02-19 10:53:30 PST
Created
attachment 334167
[details]
Patch
Antti Koivisto
Comment 3
2018-02-19 10:55:40 PST
Comment on
attachment 334167
[details]
Patch r=me
Ryosuke Niwa
Comment 4
2018-02-19 11:39:57 PST
Comment on
attachment 334167
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=334167&action=review
> Source/WebCore/ChangeLog:11 > + always destroyed on the main thread since it ends up dsestroying a
Nit: dsestroying -> destroying.
Chris Dumez
Comment 5
2018-02-19 12:39:40 PST
Created
attachment 334177
[details]
Patch
WebKit Commit Bot
Comment 6
2018-02-19 13:03:44 PST
Comment on
attachment 334177
[details]
Patch Clearing flags on attachment: 334177 Committed
r228708
: <
https://trac.webkit.org/changeset/228708
>
WebKit Commit Bot
Comment 7
2018-02-19 13:03:46 PST
All reviewed patches have been landed. Closing bug.
BoolChow
Comment 8
2018-08-13 02:43:52 PDT
Hello,which version of the iOS has merged this commit?
BoolChow
Comment 9
2018-08-13 03:11:49 PDT
If I want to avoid this bug in iOS 11.x,what should I do?
David Kilzer (:ddkilzer)
Comment 10
2018-08-13 12:06:12 PDT
(In reply to bool from
comment #8
)
> Hello,which version of the iOS has merged this commit?
This is fixed in iOS 12 Developer Seed 1 and all iOS 12 Public Seeds.
David Kilzer (:ddkilzer)
Comment 11
2018-08-13 12:08:03 PDT
(In reply to bool from
comment #9
)
> If I want to avoid this bug in iOS 11.x,what should I do?
There are currently no known workarounds to avoid this bug.
BoolChow
Comment 12
2018-08-13 20:33:21 PDT
(In reply to David Kilzer (:ddkilzer) from
comment #11
)
> (In reply to bool from
comment #9
) > > If I want to avoid this bug in iOS 11.x,what should I do? > > There are currently no known workarounds to avoid this bug.
OK,thank you.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug